corrects circle clipping

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,12 +64,16 @@ p{
 /* SVG THINGS */
 
 .overlay {
-  opacity: .7;
+  opacity: 1;
   position: fixed;
   width:100%;
   height:100%;
   z-index: 0;
   overflow: auto;
+}
+
+.circle{
+  animation: dash 15s linear infinite;
 }
 
 .line {
